--- a/assets/style.css
+++ b/assets/style.css
@@ -1,504 +1,325 @@
 :root {
-    --color-menu: #293462;
-    --color-principal-1: #216583;
-    --color-principal-2: #00818a;
-    --color-secundario-1: #f7be16;
-    --color-secundario-2: #f7de30;
-    --color-secundario-3: #ff9;
-    --color-font-light: #f2f2f2;
-    --color-font-dark: #333;
-
+  --color-menu: #062844;
+  --color-principal: #2289b4;
+  --color-secundario: #79d8cb;
+  --color-font-light: #f2f2f2;
+  --color-font-dark: #333;
 }
 
 @font-face {
-    font-family: 'icomoon';
-    src: url('fonts/icomoon.eot?xa7b56');
-    src: url('fonts/icomoon.eot?xa7b56#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?xa7b56') format('truetype'),
-        url('fonts/icomoon.woff?xa7b56') format('woff'),
-        url('fonts/icomoon.svg?xa7b56#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
+  font-family: 'icomoon';
+  src: url('fonts/icomoon.eot?xa7b56');
+  src: url('fonts/icomoon.eot?xa7b56#iefix')
+      format('embedded-opentype'),
+    url('fonts/icomoon.ttf?xa7b56') format('truetype'),
+    url('fonts/icomoon.woff?xa7b56') format('woff'),
+    url('fonts/icomoon.svg?xa7b56#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
+[class^='icon-'],
+[class*=' icon-'] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-menu:before {
-    content: "\e9bd";
+  content: '\e9bd';
 }
 
 .icon-home:before {
-    content: "\e900";
+  content: '\e900';
 }
 
 .icon-contact:before {
-    content: "\e944";
+  content: '\e944';
 }
 
 .icon-email:before {
-    content: "\e945";
+  content: '\e945';
 }
 
 .icon-work:before {
-    content: "\e9ae";
+  content: '\e9ae';
 }
 
 .icon-internet:before {
-    content: "\e9c9";
+  content: '\e9c9';
 }
 
 .icon-info:before {
-    content: "\ea0c";
+  content: '\ea0c';
 }
 
 .icon-face:before {
-    content: "\ea91";
+  content: '\ea91';
 }
 
 .icon-twitter:before {
-    content: "\ea96";
+  content: '\ea96';
 }
 
 .icon-github:before {
-    content: "\eab0";
+  content: '\eab0';
 }
 
-
-
-
-
-
 body {
-    margin: 0px;
-    border: 0px;
-    font-family: 'Signika', sans-serif;
+  margin: 0px;
+  border: 0px;
+  font-family: 'Signika', sans-serif;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.resalta {
-    border-top: solid 15px rgba(255, 0, 0, 0);
-    border-bottom: solid 15px;
-}
-
-.header {
-
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    position: sticky;
-    top: 0px;
-    background-color: var(--color-menu);
-    height: 100px;
-    z-index: 2000;
-}
-
-.header__menu {
-    display: none;
-}
-
-.header__logo {
-    font-family: 'Kalam', cursive;
-    margin: 0px 60px;
-    margin-right: 15px;
-    padding: 0px;
-    text-align: center;
-    font-size: 2em;
-    color: var(--color-font-light);
-    display: flex;
-    align-items: center;
-}
-
-.header__logo> {
-    margin: 0px;
-}
-
-.header__container--nav {
-    font-size: 1em;
-    margin-right: 30px;
-    height: 100%
-}
-
-.header__container--nav ul {
-    font-size: 1em;
-    padding: 0px;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    height: 100%;
-    margin: 0px;
-}
-
-.header__container--nav li {
-    font-size: 1.5em;
-    padding: 0px 5px;
-    margin-right: 20px;
-    color: var(--color-secundario-1);
-    font-weight: bold;
-    text-transform: capitalize;
-    height: calc(100% - 30px);
-    display: flex;
-    align-items: center;
-}
-
-.header__container--nav li:hover {
-    color: var(--color-secundario-3);
-}
-
-.header__container--nav span {
-    display: none;
+navbar-option {
+  --color-menu: #062844;
+  --color-secundario-1: var(--color-secundario);
+  --color-secundario-3: var(--color-font-light);
+  --color-font-light: rgb(241, 231, 201);
+  --color-font-light: #f2f2f2;
+  --color-font-dark: #333;
+  --logo-font-size: 40px;
+  --title-font-size: 40px;
+  --option-font-size: 25px;
+  position: sticky;
+  top: 0px;
+  z-index: 1;
 }
 
 .info {
-    background-color: var(--color-principal-1);
-    flex: 1;
-    height: 80vh;
-    display: flex;
-    align-items: center;
+  background-color: var(--color-principal);
+  flex: 1;
+  height: 80vh;
+  display: flex;
+  align-items: center;
 }
 
 .info__container {
-    background-color: var(--color-secundario-3);
-    width: 100vw;
-    display: flex;
-    justify-content: flex-end;
+  background-color: var(--color-font-light);
+  width: 100vw;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .info__container--text {
-
-    font-size: 20px;
-    color: var(--color-font-dark);
-    background-color: var(--color-font-light);
-    ;
-    display: flex;
-    flex-direction: column;
-    width: 50vw;
+  font-size: 20px;
+  color: var(--color-font-dark);
+  background-color: var(--color-font-light);
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
 }
 
 .info__title,
 .info__context {
-    margin: 5vh 10%;
+  margin: 5vh 10%;
 }
 
 .info__title {
-    font-size: 2em;
-    margin-bottom: 0px;
-
+  font-size: 2em;
+  margin-bottom: 0px;
 }
 
 .info__context {
-    font-size: 1em;
-    max-height: 40vh;
-    line-height: 2em;
-    overflow: scroll;
+  font-size: 1em;
+  max-height: 40vh;
+  line-height: 2em;
+  overflow: scroll;
 }
 
-
-
 .work {
-    display: inline-block;
-    width: 100%;
-    background-color: var(--color-secundario-1);
-    margin: 0px;
-    padding: 10px 0px;
+  display: inline-block;
+  width: 100%;
+  background-color: var(--color-secundario);
+  margin: 0px;
+  padding: 10px 0px;
 }
 
 .work__container {
-    margin: 5vh 2vw;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+  margin: 5vh 2.5vw;
+  display: grid;
+  grid-template-columns: repeat(3, calc(95vw / 3));
+  grid-auto-rows: calc(95vw / 6);
 }
 
 .work-card__container {
-    position: relative;
-    border: solid 2px;
-    margin: 5vh auto;
-    width: 25vw;
-    height: calc(25vw/2);
-    background-color: #fff;
-    cursor: pointer;
-    transition: 400ms;
-    transform-origin: center left;
-}
-
-.work-card__container>img {
-    width: 100%;
-    object-fit: cover;
+  position: relative;
+  border: solid 2px;
+  margin: auto;
+  width: 25vw;
+  height: calc(25vw / 2);
+  background-color: #fff;
+  cursor: pointer;
+  transition: 400ms;
+  transform-origin: center left;
+  z-index: 0;
 }
 
 .work-card__container:hover {
-    width: 30vw;
-    height: 15vw;
-    margin: calc(25vw/4 + 10vh/2 - 15vw/2) auto;
+  width: 30vw;
+  height: 15vw;
+}
+
+.work-card__container > img {
+  width: 100%;
+  object-fit: cover;
 }
 
 .work-card__detail {
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.9)0%, rgba(0, 0, 0, 0)100%);
-    font-size: 16px;
-    color: var(--color-font-light);
-    transition: 450ms;
-    padding: 10px 10px;
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  font-size: 16px;
+  color: var(--color-font-light);
+  transition: 450ms;
+  padding: 10px 10px;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
 }
 
-
-
 .work-card__detail:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .work-card__title {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .work-card__description {
-    margin-top: 2px;
-    margin-bottom: 2px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
-.work-card__buton a {
-
-    background-color: var(--color-font-light);
+.work-card__buttons {
+  display: flex;
+  flex-direction: row;
 }
 
-
-
-.work-card__buton img {
-    filter: sepia();
-    vertical-align: middle;
-    width: 24px;
+.work-card__buttons a {
+  color: var(--color-font-light);
+  font-size: 2em;
+  margin-right: 0.3em;
 }
 
 .contact {
-    background-color: var(--color-principal-2);
+  background-color: var(--color-principal);
 }
 
 .contact__container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 10vh 0px;
-
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10vh 0px;
 }
 
 .contact__container--form {
-    display: flex;
-    margin: 20px;
-    min-width: 300px;
-    flex-direction: column;
+  display: flex;
+  margin: 20px;
+  flex-direction: column;
+  align-items: center;
 }
 
-.contact__container--contact {}
+.contact__container--form label {
+  width: 90%;
+  font-size: 1.3em;
+  color: var(--color-font-light);
+  margin-bottom: 0.5em;
+}
 
+.contact__container--form input {
+  width: 90%;
+  min-width: 100px;
+}
 
 .social-link i {
-    display: inline-block;
-    font-size: 4em;
-    color: var(--color-font-light);
+  display: inline-block;
+  font-size: 4em;
+  color: var(--color-font-light);
 }
 
-
 .footer {
-    flex: 1;
-    height: 2em;
-    background-color: var(--color-menu);
-    color: var(--color-font-light);
-    display: flex;
-    align-items: center;
+  flex: 1;
+  height: 2em;
+  background-color: var(--color-menu);
+  color: var(--color-font-light);
+  display: flex;
+  align-items: center;
 }
 
 .footer p {
-    margin: 0px 2vw;
+  margin: 0px 2vw;
 }
 
 @media screen and (max-width: 1024px) {
+  .work__container {
+    grid-template-columns: repeat(2, calc(95vw / 2));
+    grid-auto-rows: calc(95vw / 4);
+  }
 
-    .work__container {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .work-card__container {
+    width: 36vw;
+    height: 18vw;
+  }
 
-    .work-card__container {
-        width: 35vw;
-        height: calc(35vw/2);
-    }
-
-    .work-card__container:hover {
-        width: 40vw;
-        height: 20vw;
-        margin: calc(35vw/4 + 10vh/2 - 20vw/2) auto;
-    }
-
+  .work-card__container:hover {
+    width: 45vw;
+    height: 22.5vw;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  .info__container--text {
+    font-size: 16px;
+  }
 
-    .header {
+  .work__container {
+    grid-template-columns: 1fr;
+    grid-auto-rows: calc(95vw / 2);
+  }
 
-        font-size: 14px;
-    }
+  .work-card__container {
+    width: 76vw;
+    height: 38vw;
+  }
 
-    .header__logo {
-        margin-left: 30px;
-    }
-
-    .header__container--nav {
-        margin-right: 10px;
-    }
-
-    .header__container--nav li {
-        margin-right: 10px;
-        font-size: 1.5em;
-    }
-
-    .info__container--text {
-
-        font-size: 16px;
-    }
-
-    .work__container {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
-    .work-card__container {
-        width: 80vw;
-        height: 40vw;
-    }
-
-    .work-card__container:hover {
-        width: 90vw;
-        height: 45vw;
-        margin: calc(40vw/2 + 10vh/2 - 45vw/2) auto;
-
-
-    }
-}
-
-@media screen and (max-height: 500px) {
-    .header {
-        height: 70px;
-    }
+  .work-card__container:hover {
+    width: 90vw;
+    height: 45vw;
+  }
 }
 
 @media screen and (max-width: 480px) {
-
-
-    /*js*/
-    .resalta {
-        border: 0px rgba(255, 0, 0, 0);
-        height: 2em;
-    }
-
-    .header__menu {
-        display: block;
-        text-align: center;
-        line-height: 5em;
-        position: fixed;
-        z-index: 2;
-        bottom: 2em;
-        right: 1em;
-        height: 4em;
-        width: 4em;
-        background: var(--color-menu);
-        border-radius: 2em;
-    }
-
-
-    .header__menu i {
-        display: inline-block;
-        color: var(--color-font-light);
-        font-size: 2em;
-
-    }
-
-    .header__menu.is-active i {
-        display: none;
-    }
-
-    .header {
-        justify-content: center;
-    }
-
-    .header__container--nav {
-        height: 8em;
-        width: 150px;
-        overflow: hidden;
-        position: fixed;
-        bottom: 4em;
-        right: 3.5em;
-        margin: 0px;
-
-        background-color: var(--color-menu);
-        transition-property: height var(--color-font-light) bottom;
-        transition-duration: 0.5s;
-    }
-
-    .header__container--nav.no-active {
-        display: block;
-        overflow: hidden;
-        bottom: 3em;
-        height: 1em;
-        width: 1em;
-        margin: 0px;
-    }
-
-    .header__container--nav ul {
-        display: flex;
-        flex-direction: column;
-
-    }
-
-    .header__container--nav li {
-        font-size: 1.3em;
-        margin-right: 0px;
-        height: 2em;
-        transition: 0.3s;
-    }
-
-    .header__container--nav li:focus {
-        font-size: 1.5em;
-        height: 2em;
-    }
-
-
-
-    .resalta span {
-        display: inline-block;
-        margin-right: 0.25em;
-    }
-
-    .info__container--text {
-        width: 100vh;
-    }
-
-
-}
+  .info__container--text {
+    width: 100vh;
+  }
 }
 
-@media screen and (max-width: 320px) {}
+@media screen and (max-width: 320px) {
+  .contact__container--form {
+    margin: 0px;
+  }
+}
